product features, for now it's limited to create and list all product only
